# Data-Structure-and-Algorithms

./: ArrayCOnt.cpp  CMakeLists.txt  Calculator.cpp  DoublyLinked.cpp  EvenPrimeProduct.cpp  LinkedListExercise.cpp  Lists.cpp  Maths.cpp  Omanipulator.cpp  PairHypo.cpp  RecursivedigitSum.cpp  addition.cpp  arrayFuncb.cpp  arrayFunctions.cpp  arrays.cpp  arrrayExercise.cpp  binaryRecursive.cpp  binarySearch.cpp  bubbleSort.cpp  bubbleSort1.cpp  checkOccurence.cpp  circularLinkedList.cpp  classCircle.cpp  classPerson.cpp  constant.cpp  deletion.cpp  fibonacci.cpp  hypoth.cpp  incree-decreement.cpp  insertion.cpp  linkedListBasics.cpp  linkedListReview.cpp  linkedListpersonal.cpp  linkedLists.cpp  loop.cpp  mathOper.cpp  mergeSort.cpp  mergeSort2.cpp  minimalLinkedLists.cpp  newLinkedList.cpp  (+17 more)
Abstract Data Structures/: QueueUsingArray.cpp  QueueUsingLinkedLists .cpp  Stack.cpp  StackLinkedLists.cpp  stackExercises.cpp  stackExercisesArrays.cpp
Exams/: arrays.cpp  mergeSort.cpp
