cmake_minimum_required(VERSION 3.30)
project(DSA_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(DSA_cpp main.cpp
        Calculator.cpp
        constant.cpp
        Omanipulator.cpp
        Maths.cpp
        hypoth.cpp
        PairHypo.cpp
        quadratic.cpp
        addition.cpp
        swap.cpp
        sphere_volume.cpp
        additionb.cpp
        insertion.cpp
        deletion.cpp
        oddProduct.cpp
        cmake-build-debug/even.cpp
        cmake-build-debug/prime.cpp
        arrays.cpp
        arrrayExercise.cpp
        arrayFunctions.cpp
        arrayFuncb.cpp
        pointera.cpp
        mathOper.cpp
        incree-decreement.cpp
        ArrayCOnt.cpp
        cmake-build-debug/recursive.cpp
        EvenPrimeProduct.cpp
        fibonacci.cpp
        cmake-build-debug/factorial.cpp
        cmake-build-debug/recursiveSum.cpp
        recursivePrint.cpp
        recursiveCounter.cpp
        stringReverse.cpp
        RecursivedigitSum.cpp
        oop.cpp
        sorting.cpp
        loop.cpp
        timeComplex.cpp
        timeComplex1.cpp
        progression.cpp
        classCircle.cpp
        classPerson.cpp
        bubbleSort.cpp
        mergeSort.cpp
        mergeSort2.cpp
        bubbleSort1.cpp
        quickSort.cpp
        binarySearch.cpp
        binaryRecursive.cpp
        linkedLists.cpp
        minimalLinkedLists.cpp
        newLinkedList.cpp
        "templateLinkedList .cpp"
        Lists.cpp
        checkOccurence.cpp
        reversedLinkedlist.cpp
)
